Update version numbers in examples.

--- a/doc/user_guide/tex/genom-anx-trouble.tex
+++ b/doc/user_guide/tex/genom-anx-trouble.tex
@@ -61,7 +61,7 @@ typedef struct DIST_STR {
 \subsection{\texttt{csLib} initialization failures}
 
 \begin{center}\begin{cartouche}\small\begin{verbatim}
-rantanplan% h2 init
+blues% h2 init
 Initializing csLib devices: 
 Cslib devices already exist on this machine.
 Do you want to delete and recreate them (y/n) ? 
@@ -75,9 +75,9 @@ again. Answer \texttt{y} if you need to reset \texttt{csLib}.
 \subsection{Module startup failures}
 
 \begin{center}\begin{cartouche}\small\begin{verbatim}
-rantanplan% ./codels/i386-linux/demo -b
-Hilare2 execution environment version 1.0
-Copyright (c) 1999 LAAS/CNRS
+blues% ./codels/i386-linux/demo -b
+Hilare2 execution environment version 2.11
+Copyright (c) 1999-2011 LAAS/CNRS
 demo: error creating /home/matthieu/.demo.pid: File exists
 \end{verbatim}\end{cartouche}\end{center}
 
