Refer to valgrind as a memory debugger in addition to purify.
Remove Sun^WOracle workshop reference since no one remembers that.

--- a/doc/user_guide/tex/genom-anx-trouble.tex
+++ b/doc/user_guide/tex/genom-anx-trouble.tex
@@ -108,4 +108,4 @@ another number.
 
 Writes beyond  arrays'  bounds and  writes  in memory  pages  that do not
 belong to you are  very common mistakes.   Use common Unix tools such  as
-\texttt{purify} or \texttt{workshop} to debug.
+\texttt{valgrind} or \texttt{purify} to help debugging these issues.
