Use Latin Modern fonts and A4 paper.
This requires a relatively recent TeX installation, but the resulting
PDF is much better.

--- a/doc/user_guide/genom.tex
+++ b/doc/user_guide/genom.tex
@@ -30,8 +30,10 @@
 %
 %                                       Anthony Mallet on Thu Oct 18 2001
 
-\documentclass[11pt]{book}
+\documentclass[a4paper,11pt]{book}
 
+\usepackage{lmodern}
+\usepackage[T1]{fontenc}
 \usepackage{genom}		 % this document style
 \usepackage{a4wide}
 \usepackage{graphicx}
@@ -44,7 +46,7 @@
    \usepackage[colorlinks=true,linkcolor=black,pagecolor=black]{hyperref}
 \fi\fi
 \makeatother
-\usepackage[T1]{fontenc}
+
 \usepackage[latin1]{inputenc}
 
 \title{\fontsize{40}{40}\bf\GenoM\\\vskip1cm\Huge User's Guide}
@@ -57,7 +59,7 @@ Université de Toulouse; UPS; INSA; INP; ISAE; LAAS; F-31077 Toulouse France\\
 \\
 \url{{sara.fleury,matthieu.herrb,anthony.mallet}@laas.fr}}
 
-\date{April 2011}
+\date{October 2011}
 
 \begin{document}
 
